# LitForge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ltc_citation_network.html  ltc_network.graphml  ltc_network.json  pyproject.toml  test_verification.py
docs/: COMPETITIVE_POSITIONING.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_MASTER_PLAN.md  LITFORGE_STATE_OF_THE_ART_PLAN.md  LITFORGE_STATUS_AND_ROADMAP.md  embedding_indices.md
examples/: basic_search.py  citation_network.py  crewai_agent.py  knowledge_base.py  mcp_tools.py  vector_stores.py
scripts/: build_index.py  start_mcp.sh  start_ui.sh
src/litforge/: __init__.py  api.py  cli.py  config.py
src/litforge/clients/: __init__.py  arxiv.py  base.py  crossref.py  openalex.py  pubmed.py  semantic_scholar.py  unpaywall.py
src/litforge/core/: __init__.py  forge.py
src/litforge/embedding/: __init__.py  base.py  openai.py  sentence_transformers.py
src/litforge/integrations/: __init__.py  crewai.py  langchain.py  langgraph.py
src/litforge/llm/: __init__.py  base.py  openai.py  router.py
src/litforge/mcp/: __init__.py  server.py  tools.py
src/litforge/models/: __init__.py  network.py  publication.py  search.py
src/litforge/processing/: __init__.py  extractor.py  parser.py  references.py
src/litforge/services/: __init__.py  citation.py  discovery.py  hybrid_search.py  knowledge.py  qa.py  rag_search.py  retrieval.py  scoring.py  semantic_search.py  utils.py
src/litforge/stores/: __init__.py  base.py  chromadb.py  embedding_index.py  faiss.py  qdrant.py
src/litforge/ui/: __init__.py  app.py  chat.py
tests/: __init__.py  conftest.py  test_config.py  test_integrations.py  test_mcp.py  test_models.py  test_stores.py
