[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litforge"
version = "0.2.0"
description = "Forging Knowledge from Literature - Unified scientific literature search, retrieval, and knowledge synthesis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sribharath Kainkaryam", email = "sdodlapati3@gmail.com" }
]
maintainers = [
    { name = "Sribharath Kainkaryam", email = "sdodlapati3@gmail.com" }
]
keywords = [
    "literature",
    "research",
    "papers",
    "citations",
    "knowledge-base",
    "rag",
    "semantic-search",
    "openalex",
    "pubmed",
    "semantic-scholar",
    "mcp",
    "ai-agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

dependencies = [
    # Core HTTP & async
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    
    # Data models
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # API clients
    "pyalex>=0.13",
    
    # PDF processing
    "pymupdf>=1.23.0",
    
    # Vector store (default)
    "chromadb>=0.4.0",
    
    # Embeddings (cloud-first)
    "openai>=1.0.0",
    
    # Utilities
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "diskcache>=5.6.0",
]

[project.optional-dependencies]
# Local embeddings (switch from cloud)
local = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]

# Additional API clients
full = [
    "semanticscholar>=0.8.0",
    "biopython>=1.81",  # For PubMed/Entrez
    "arxiv>=2.0.0",
]

# Alternative vector stores
qdrant = [
    "qdrant-client>=1.7.0",
]

faiss = [
    "faiss-cpu>=1.7.0",
]

# Graph analysis
graph = [
    "networkx>=3.0",
    "igraph>=0.11.0",
]

# LLM providers
anthropic = [
    "anthropic>=0.18.0",
]

local-llm = [
    "ollama>=0.1.0",
]

# Server interfaces
server = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

mcp = [
    "mcp>=1.0.0",
]

# Framework integrations
crewai = [
    "crewai>=0.30.0",
    "crewai-tools>=0.4.0",
]

langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]

langgraph = [
    "langgraph>=0.2.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.1.0",
]

# Development
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.0.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

# All optional dependencies
all = [
    "litforge[local,full,graph,server,mcp,crewai,langchain,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/sdodlapati3/LitForge"
Documentation = "https://github.com/sdodlapati3/LitForge#readme"
Repository = "https://github.com/sdodlapati3/LitForge"
Issues = "https://github.com/sdodlapati3/LitForge/issues"
Changelog = "https://github.com/sdodlapati3/LitForge/blob/main/CHANGELOG.md"

[project.scripts]
litforge = "litforge.cli:main"
lf = "litforge.cli:main"
litforge-mcp = "litforge.mcp.server:main"

[project.entry-points."litforge.clients"]
openalex = "litforge.clients.openalex:OpenAlexClient"
semantic_scholar = "litforge.clients.semantic_scholar:SemanticScholarClient"
pubmed = "litforge.clients.pubmed:PubMedClient"
arxiv = "litforge.clients.arxiv:ArxivClient"
crossref = "litforge.clients.crossref:CrossrefClient"

[project.entry-points."litforge.stores"]
chroma = "litforge.stores.vector.chroma:ChromaStore"
qdrant = "litforge.stores.vector.qdrant:QdrantStore"
faiss = "litforge.stores.vector.faiss:FAISSStore"

[project.entry-points."litforge.llm"]
openai = "litforge.llm.openai:OpenAIProvider"
anthropic = "litforge.llm.anthropic:AnthropicProvider"
ollama = "litforge.llm.ollama:OllamaProvider"

[tool.hatch.build.targets.wheel]
packages = ["src/litforge"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B905",   # zip strict
]

[tool.ruff.lint.isort]
known-first-party = ["litforge"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "pyalex.*",
    "semanticscholar.*",
    "arxiv.*",
    "Bio.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external APIs",
]

[tool.coverage.run]
source = ["src/litforge"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
